--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language_fr.properties
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language_fr.properties
@@ -6,6 +6,7 @@ add-workflow=Ajouter le flux de travail (Automatic Translation)
 assign-form=Assignez Form (Automatic Translation)
 complete-form=Remplissez le formulaire (Automatic Translation)
 current-entry=Entrée courante (Automatic Translation)
+delete-form=Delete Form (Automatic Copy)
 do-you-want-to-proceed-with-the-update=Voulez-vous poursuivre la mise à jour ? (Automatic Translation)
 export-only-approved-submissions=Exporter uniquement les présentations approuvées. (Automatic Translation)
 field-set=Jeu de champs (Automatic Translation)
