--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language_zh_CN.properties
@@ -6,6 +6,7 @@ add-workflow=添加工作流 (Automatic Translation)
 assign-form=将窗体分配 (Automatic Translation)
 complete-form=填好形式 (Automatic Translation)
 current-entry=当前词条 (Automatic Translation)
+delete-form=Delete Form (Automatic Copy)
 do-you-want-to-proceed-with-the-update=您是否想要继续进行更新？ (Automatic Translation)
 export-only-approved-submissions=出口仅批准的意见。 (Automatic Translation)
 field-set=字段集 (Automatic Translation)
