LPS-65168 Lang keys

--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language_el.properties
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language_el.properties
@@ -6,6 +6,7 @@ add-workflow=Προσθήκη ροής εργασίας (Automatic Translation)
 assign-form=Αντιστοιχίσετε μορφή (Automatic Translation)
 complete-form=Πλήρης μορφή (Automatic Translation)
 current-entry=Τρέχουσα είσοδος (Automatic Translation)
+delete-form=Διαγραφή φόρμας (Automatic Translation)
 do-you-want-to-proceed-with-the-update=Θέλετε να συνεχίσετε με την αναπροσαρμογή; (Automatic Translation)
 export-only-approved-submissions=Εξαγωγή μόνο εγκεκριμένο υποβολές. (Automatic Translation)
 field-set=Το πεδίο σύνολο (Automatic Translation)
