--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language_zh_TW.properties
@@ -6,6 +6,7 @@ add-workflow=添加工作流 (Automatic Translation)
 assign-form=將表單分配 (Automatic Translation)
 complete-form=填好形式 (Automatic Translation)
 current-entry=當前詞條 (Automatic Translation)
+delete-form=刪除表單 (Automatic Translation)
 do-you-want-to-proceed-with-the-update=您是否想要继续进行更新？ (Automatic Translation)
 export-only-approved-submissions=出口僅批准的意見。 (Automatic Translation)
 field-set=欄位集 (Automatic Translation)
