--- a/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language_sl.properties
+++ b/modules/private/apps/forms-and-workflow/portal-workflow/portal-workflow-kaleo-forms-web/src/main/resources/content/Language_sl.properties
@@ -6,6 +6,7 @@ add-workflow=Add Workflow (Automatic Copy)
 assign-form=Assign Form (Automatic Copy)
 complete-form=Complete Form (Automatic Copy)
 current-entry=Current Entry (Automatic Copy)
+delete-form=Izbriši obrazec (Automatic Translation)
 do-you-want-to-proceed-with-the-update=Do you want to proceed with the update? (Automatic Copy)
 export-only-approved-submissions=Export only approved submissions. (Automatic Copy)
 field-set=Field Set (Automatic Copy)
